Home page responsive and navbar visibility fixed along with boreder added

--- a/app/assets/stylesheets/contact.css.scss
+++ b/app/assets/stylesheets/contact.css.scss
@@ -27,6 +27,16 @@
     font-size: 40px;
   }
 
+@media (min-width: 460px) {   
+    .container-fluid .row
+   {
+       padding: 2%;
+       margin-left: 10%;
+       margin-top:5%;
+   }
+}
+
+
 @media (min-width: 576px) {   
      .container-fluid .row
     {
